<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/distanciaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_distancia_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/main_totalDistancia_textView" />

    <EditText
        android:id="@+id/precoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_preco_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/main_precoPorLitro_textView" />

    <EditText
        android:id="@+id/autonomiaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_autonomia_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:gravity="center"
        android:text="@string/main_kmPorLitro_textView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/main_gastoTotal_textView"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:gravity="center"
        android:text="@string/main_calculoGasto_textView"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="32sp" />

    <Button
        android:id="@+id/calcularButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/main_calcular_button"
        android:textSize="16sp" />

</LinearLayout>